@@ -8,10 +8,10 @@
 
 /////////////// END OF PROTOCOL INTERNAL CODE    ///////////////////
 
-int init_proto_yahoogames_struct() {
-    protocol_t * protocol_struct = init_protocol_struct_for_registration(PROTO_YAHOOGAMES, PROTO_YAHOOGAMES_ALIAS);
+int init_proto_allocine_struct() {
+    protocol_t * protocol_struct = init_protocol_struct_for_registration(PROTO_ALLOCINE, PROTO_ALLOCINE_ALIAS);
     if (protocol_struct != NULL) { 
-        return register_protocol(protocol_struct, PROTO_YAHOOGAMES);
+        return register_protocol(protocol_struct, PROTO_ALLOCINE);
     } else {
         return 0;
     }
