@@ -29,6 +29,7 @@ Version 1.6.9.1
 	- Add classification for PROTO_OGG by content type after HTTP
 	- Add classification for protocols by hostnames: PROTO_WECHAT, PROTO_BITGRAVITY, PROTO_CACHEFLY, PROTO_CDN77
 	- Replace PROTO_TLS by PROTO_CDISCOUNT
+	- Replace PROTO_YAHOOGAMES by PROTO_ALLOCINE
 
 
 ## Version 1.6.9.0
